--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fh-mbaas-client",
   "description": "FeedHenry MBaaS Client",
-  "version": "0.3.1",
+  "version": "0.3.2",
   "author": "FeedHenry",
   "main": "index.js",
   "directories": {
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "request": "^2.45.0",
-    "underscore": "1.8.0"
+    "underscore": "1.8.0",
+    "bunyan": "0.22.0"
   },
   "devDependencies": {
     "grunt-contrib-clean": "0.6.0",
