--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fh-mbaas-client",
   "description": "FeedHenry MBaaS Client",
-  "version": "0.5.1-pre2",
+  "version": "0.5.1",
   "author": "FeedHenry",
   "main": "index.js",
   "directories": {
