--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "mocha": "^2.1.0",
     "nock": "0.15.0",
     "plato": "1.0.1",
-    "proxyquire": "0.4.1"
+    "proxyquire": "0.4.1",
+    "sinon": "^1.17.2"
   },
   "license": "Copyright (c) 2014 FeedHenry Ltd, All Rights Reserved."
 }
