--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "node": ">=0.8 < 0.11"
   },
   "dependencies": {
-    "bunyan": "0.22.0",
+    "fh-logger": "0.5.0",
     "request": "^2.45.0",
     "underscore": "^1.8.0"
   },
