--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lib": "lib"
   },
   "engines": {
-    "node": ">+0.8 < 0.11"
+    "node": ">=0.8 < 0.11"
   },
   "dependencies": {
     "bunyan": "0.22.0",
