--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fh-mbaas-client",
   "description": "FeedHenry MBaaS Client",
-  "version": "0.14.0",
+  "version": "0.15.0",
   "author": "FeedHenry",
   "main": "index.js",
   "directories": {
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "fh-logger": "0.5.0",
-    "request": "^2.45.0",
+    "request": "^2.74.0",
     "underscore": "^1.8.0"
   },
   "devDependencies": {
@@ -26,5 +26,9 @@
     "proxyquire": "0.4.1",
     "sinon": "^1.17.2"
   },
-  "license": "Apache-2.0"
+  "license": "Apache-2.0",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:feedhenry/fh-mbaas-client.git"
+  }
 }
