--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "engines": {
     "node": ">=0.8 <= 4.4"
   },
+  "scripts": {
+    "test": "grunt fh:test"
+  },
   "dependencies": {
     "fh-logger": "0.5.0",
     "request": "^2.74.0",
