--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lib": "lib"
   },
   "engines": {
-    "node": ">=0.8 <= 4.4"
+    "node": "4.4"
   },
   "scripts": {
     "test": "grunt fh:test"
