--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,12 @@
 language: node_js
 node_js:
-  - "4.4.3"
+  - 4
+  - 6
+  - 8
 sudo: false
 before_install:
-  - npm install -g npm@2.13.5
+  - npm install -g npm@3.10.8
   - npm install -g grunt-cli
 install: npm install
+script:
+  - grunt
