--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fh-mbaas-client",
   "description": "FeedHenry MBaaS Client",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "author": "FeedHenry",
   "main": "index.js",
   "directories": {
@@ -14,7 +14,7 @@
     "test": "grunt fh:test"
   },
   "dependencies": {
-    "fh-logger": "^0.5.5",
+    "fh-logger": "1.0.0",
     "request": "^2.81.0",
     "underscore": "^1.8.0"
   },
